[tool.poetry]
name = "Tower Defense"
version = "0.1.0"
description = ""
authors = ["Farshad Sanginnezhad <fxfix3r@gmail.com>"]
readme = "README.md"
packages = [{include = "venv"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
